--- a/app.json
+++ b/app.json
@@ -42,7 +42,7 @@
         "STICKER_DATA": {
             "description": "Name of stickers created using bot. Can also split using ;",
             "required": true,
-            "value":"Paat"
+            "value":"ᴘᴀᴀᴛʜᴜ;𝙎𝙐𝙃𝘼𝙄𝘿-𝘽𝙍𝙊🦋☀️"
         },
         "CHATBOT": {
             "description": "chat bot ! auto replay",
@@ -52,12 +52,12 @@
         "BOT_NAME": {
             "description": "Name of Your Bot",
             "required": true,
-            "value":"ʏᴏᴜʀ ʙᴏᴛ ɴᴀᴍᴇ"
+            "value":"ᴘᴀᴀᴛʜᴜ"
         },
         "AUDIO_DATA": {
             "description": "Name of audio (take) name;name;image(url)",
             "required": true,
-            "value":"ᴀʙᴜ;ᴊsʟ-4ʙᴜ;https://i.imgur.com/OseHc3b.jpg"
+            "value":"𝑆𝑈𝐻𝐴𝐼𝐷;𝑆𝑈𝐻𝐴𝐼𝐷-𝐵𝑅𝑂;https://i.imgur.com/btgMI07.jpeg"
         },
         "MODE": {
             "description": "Work Type Private or public",
@@ -67,12 +67,12 @@
         "SUDO": {
             "description": "These numbers can control your bot. seperate with commas",
             "required": false,
-            "value":"917025994178"
+            "value":"917560842435"
         },
         "ALIVE": {
             "description": "Alive message {image/link}, {sender} can also be used",
             "required": false,
-            "value":"{pp} Active since {uptime}\n User:{sender}"
+            "value":"Wiki nok alive msg ind ath edit aakiko"
         },
        "SESSION": {
             "description": "Your MD Qr Code",
@@ -87,6 +87,6 @@
       "url": "heroku-community/apt"
       },
       {
-      "url": "https://github.com/Afx-Abu/https-abu-heroku-buildpack-webp-binaries.git"
+      "url": "https://github.com/SUHAID-BROO/https-abu-heroku-buildpack-webp-binaries.git"
       }]
   }
